--- a/package.json
+++ b/package.json
@@ -1,19 +1,50 @@
 {
   "name": "AccessibleLocomotionWebXR",
+  "author": "AccessibleLocomotionWebXR",
   "description": "AccessibleLocomotionWebXR",
   "version": "0.1.0",
   "license": "MIT",
+  "main": "index.js",
   "scripts": {
-    "start": "budo --live --verbose --port 3000 --open",
-    "deploy": "gh-pages -d dist"
+    "start": "cross-env WATCH=true NODE_ENV=development gulp",
+    "start:prod": "cross-env WATCH=true gulp",
+    "altstart": "budo --live --verbose --port 3000 --open",
+    "build": "cross-env NODE_ENV=development gulp build",
+    "build:prod": "gulp build",
+    "eslint": "eslint --ignore-pattern build -- .",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "budo": "^11.5.0",
-    "gh-pages": "2.0.1",
-    "ghpages": "0.0.10"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.3",
+    "browserify": "^16.2.3",
+    "cross-env": "^5.2.0",
+    "del": "^3.0.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.5.0",
+    "eslint-plugin-import": "^2.14.0",
+    "fancy-log": "^1.3.3",
+    "gh-pages": "^2.0.1",
+    "gulp": "^4.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0",
+    "budo": "^11.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RealityVirtually2019/AccessibleLocomotionWebXR.git"
   },
   "keywords": [
     "aframe",
+    "aframe-scene",
     "webvr",
     "vr"
   ]
